@@ -1,0 +1,256 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!-- Fibaro: FGKF-601 Keyfob -->
+
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+	<!-- Configuration -->
+	<CommandClass id="112">	
+		<Value type="short" genre="config" instance="1" index="1" label="Lock Mode - unlocking sequence" min="0" max="28086" value="0">
+			<Help>
+			This parameter allows to activate Lock Mode and set up unlocking sequence. 
+			Device will lock after time set in parameter 2 or after pressing and holding selected button. 
+			0 - Lock Mode disabled.
+			9-28086 - unlocking sequence.
+			See "Lock Mode" on page 9 for more information.
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="2" label="Lock Mode - time to lock and locking button" min="0" max="1791-" value="60">
+			<Help>
+			This parameter allows to set time that must elapse from the last press of the button to lock the device and locking button.
+			Setting locking button will deactivate associations and scenes for pressing and holding the selected button.
+			This parameter is irrelevant if parameter 1 is set to 0 (Lock Mode disable).
+			0 - Lock Mode disabled.
+			5-1791- calculated value.
+			See "Lock Mode" on page 9 for more information
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="3" label="First scene sequence" min="0" max="28086-" value="0">
+			<Help>
+			This parameter allows to set up sequence that activates scene with ID 7.
+			0 - 1st sequence disabled.
+			9-28086 - value of sequence.
+			See "Sequences" on page 10 for more information.			
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="4" label="Second scene sequence" min="0" max="28086-" value="0">
+			<Help>
+			This parameter allows to set up sequence that activates scene with ID 8.
+			0 - 1st sequence disabled.
+			9-28086 - value of sequence.
+			See "Sequences" on page 10 for more information.			
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="5" label="Third scene sequence" min="0" max="28086-" value="0">
+			<Help>
+			This parameter allows to set up sequence that activates scene with ID 9.
+			0 - 1st sequence disabled.
+			9-28086 - value of sequence.
+			See "Sequences" on page 10 for more information.			
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="6" label="Fourth scene sequence" min="0" max="28086-" value="0">
+			<Help>
+			This parameter allows to set up sequence that activates scene with ID 10.
+			0 - 1st sequence disabled.
+			9-28086 - value of sequence.
+			See "Sequences" on page 10 for more information.			
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="7" label="Fifth scene sequence" min="0" max="28086-" value="0">
+			<Help>
+			This parameter allows to set up sequence that activates scene with ID 11.
+			0 - 1st sequence disabled.
+			9-28086 - value of sequence.
+			See "Sequences" on page 10 for more information.			
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="8" label="Sixth scene sequence" min="0" max="28086-" value="0">
+			<Help>
+			This parameter allows to set up sequence that activates scene with ID 12.
+			0 - 1st sequence disabled.
+			9-28086 - value of sequence.
+			See "Sequences" on page 10 for more information.			
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="9" label="Sequences - timeout" min="5" max="30" value="10">
+			<Help>
+			This parameter allows to set time that must elapse from the last press of the button to check if the sequence is valid.
+			Available settings: 5-30 (0.5-3s, 0.1s step) - time to lock
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="10" label="Single button associations - operating mode" value="0" size="1">
+			<Help>This parameter allows to choose operating mode for single button associations.</Help>
+			<Item label="Single press switches state to opposite" value="0" />
+			<Item label="Single press switches state to opposite, double press sets to maximum leve" value="1" />
+			<Item label="Single press turns on, double press turns off" value="2" />
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="11" label="Value sent to Square association group" min="1" max="255" value="255">
+			<Help>
+			This parameter allows to set value sent to devices in association group. 
+			It will result in turning multilevel devices on with set or last level. 
+			Value is irrelevant for simple on/off devices.
+			Available settings: 1-99 or 255.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="12" label="Value sent to Circle association group" min="1" max="255" value="255">
+			<Help>
+			This parameter allows to set value sent to devices in association group. 
+			It will result in turning multilevel devices on with set or last level. 
+			Value is irrelevant for simple on/off devices.
+			Available settings: 1-99 or 255.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="13" label="Value sent to Cross association group" min="1" max="255" value="255">
+			<Help>
+			This parameter allows to set value sent to devices in association group. 
+			It will result in turning multilevel devices on with set or last level. 
+			Value is irrelevant for simple on/off devices.
+			Available settings: 1-99 or 255.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="14" label="Value sent to Triangle association group" min="1" max="255" value="255">
+			<Help>
+			This parameter allows to set value sent to devices in association group. 
+			It will result in turning multilevel devices on with set or last level. 
+			Value is irrelevant for simple on/off devices.
+			Available settings: 1-99 or 255.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="15" label="Value sent to Minus association group" min="1" max="255" value="255">
+			<Help>
+			This parameter allows to set value sent to devices in association group. 
+			It will result in turning multilevel devices on with set or last level. 
+			Value is irrelevant for simple on/off devices.
+			Available settings: 1-99 or 255.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="16" label="Value sent to Plus association group" min="1" max="255" value="255">
+			<Help>
+			This parameter allows to set value sent to devices in association group. 
+			It will result in turning multilevel devices on with set or last level. 
+			Value is irrelevant for simple on/off devices.
+			Available settings: 1-99 or 255.
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="17" label="Paired buttons association for Square and Circle" value="0" size="1">
+			<Help>
+			This parameter allows to activate paired buttons association mode for Square and Circle buttons. 
+			Paired buttons are dependent and association are sent only to Square groups. Circle turns devices on and increases value, Square turns them off and decreases value.
+			</Help>
+			<Item label="Inactive" value="0" />
+			<Item label="Active" value="1" />
+		</Value>
+		<Value type="list" genre="config" instance="1" index="18" label="Paired buttons association for Cross and Triangle" value="0" size="1">
+			<Help>
+			This parameter allows to activate paired buttons association mode for Cross and Triangle buttons. 
+			Paired buttons are dependent and association are sent only to Cross groups. Triangle turns devices on and increases value, Cross turns them off and decreases value.
+			</Help>
+			<Item label="Inactive" value="0" />
+			<Item label="Active" value="1" />
+		</Value>
+		<Value type="list" genre="config" instance="1" index="19" label="Paired buttons association for Minus and Plus" value="0" size="1">
+			<Help>
+			This parameter allows to activate paired buttons association mode for Minus and Plus buttons. 
+			Paired buttons are dependent and association are sent only to Minus groups. Plus turns devices on and increases value, Minus turns them off and decreases value.
+			</Help>
+			<Item label="Inactive" value="0" />
+			<Item label="Active" value="1" />
+		</Value>		
+		<Value type="byte" genre="config" instance="1" index="21" label="Scene activation for Square button" min="1" max="255" value="9">
+			<Help>
+			This parameter determines which actions result in sending assigned scene IDs and attributes to the controller.
+			1 - Key Pressed 1 time.
+			2 - Key Pressed 2 times.
+			4 - Key Pressed 3 times.
+			8 - Key Held Down and Released.
+			Default setting: 9, 1x and hold.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="22" label="Scene activation for Circle button" min="1" max="255" value="9">
+			<Help>
+			This parameter determines which actions result in sending assigned scene IDs and attributes to the controller.
+			1 - Key Pressed 1 time.
+			2 - Key Pressed 2 times.
+			4 - Key Pressed 3 times.
+			8 - Key Held Down and Released.
+			Default setting: 9, 1x and hold.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="23" label="Scene activation for Cross button" min="1" max="255" value="9">
+			<Help>
+			This parameter determines which actions result in sending assigned scene IDs and attributes to the controller.
+			1 - Key Pressed 1 time.
+			2 - Key Pressed 2 times.
+			4 - Key Pressed 3 times.
+			8 - Key Held Down and Released.
+			Default setting: 9, 1x and hold.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="24" label="Scene activation for Triangle button" min="1" max="255" value="9">
+			<Help>
+			This parameter determines which actions result in sending assigned scene IDs and attributes to the controller.
+			1 - Key Pressed 1 time.
+			2 - Key Pressed 2 times.
+			4 - Key Pressed 3 times.
+			8 - Key Held Down and Released.
+			Default setting: 9, 1x and hold.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="25" label="Scene activation for Minus button" min="1" max="255" value="9">
+			<Help>
+			This parameter determines which actions result in sending assigned scene IDs and attributes to the controller.
+			1 - Key Pressed 1 time.
+			2 - Key Pressed 2 times.
+			4 - Key Pressed 3 times.
+			8 - Key Held Down and Released.
+			Default setting: 9, 1x and hold.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="26" label="Scene activation for Plus button" min="1" max="255" value="9">
+			<Help>
+			This parameter determines which actions result in sending assigned scene IDs and attributes to the controller.
+			1 - Key Pressed 1 time.
+			2 - Key Pressed 2 times.
+			4 - Key Pressed 3 times.
+			8 - Key Held Down and Released.
+			Default setting: 9, 1x and hold.
+			</Help>
+		</Value>	
+		<Value type="short" genre="config" instance="1" index="29" label="Associations in Z-Wave network Security Mode" min="0" max="4095" value="4095">
+			<Help>
+			Parameter defines how commands are sent in specified association groups: using Security Mode or not.
+			Parameter is active only in Z-Wave network Security Mode. It does not apply to 1st Lifeline association group.
+			1    : 2nd group sent using Security Mode.
+			2    : 3rd group sent using Security Mode.
+			4    : 4th group sent using Security Mode.
+			8    : 5th group sent using Security Mode.
+			16   : 6th group sent using Security Mode.
+			32   : 7th group sent using Security Mode.
+			64   : 8th group sent using Security Mode.
+			128  : 9th group sent using Security Mode.
+			256  : 10th group sent using Security Mode.
+			512  : 11th group sent using Security Mode.
+			1024 : 12th group sent using Security Mode.
+			2048 : 13th group sent using Security Mode.
+			</Help>
+		</Value>		
+	</CommandClass>
+	<!-- Association Groups -->
+	<CommandClass id="133">
+		<Associations num_groups="13">
+			<Group index="1" max_associations="1" label="Lifeline"/>
+			<Group index="2" max_associations="5" label="Square - On/Of" />
+			<Group index="3" max_associations="5" label="Square - Multilevel" />
+			<Group index="4" max_associations="5" label="Circle - On/Of" />
+			<Group index="5" max_associations="5" label="Circle - Multilevel" />
+			<Group index="6" max_associations="5" label="Cross - On/Of" />
+			<Group index="7" max_associations="5" label="Cross - Multilevel" />
+			<Group index="8" max_associations="5" label="Triangle - On/Of" />
+			<Group index="9" max_associations="5" label="Triangle - Multilevel" />
+			<Group index="10" max_associations="5" label="Minus - On/Of" />
+			<Group index="11" max_associations="5" label="Minus - Multilevel" />
+			<Group index="12" max_associations="5" label="Plus - On/Of" />
+			<Group index="13" max_associations="5" label="Plus - Multilevel" />
+		</Associations>
+	</CommandClass>
+</Product>
